--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <iframe src="index.html" sandbox='allow-scripts allow-same-origin'></frame> -->
 </head>
 <body>
   <app-root></app-root>
